# SMURFS

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  amplitude_spectra_calculation.py  kepler.txt  main.py  preparation.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yaml
analysis/: analysis.py
docs/: requirements.txt
docs/source/: Example_1_TESS.html  api.rst  conf.py  example.md  example.rst  index.md  index.rst  terminal.rst
files/: __init__.py  dataHandler.py  preparation.py
notebook_examples/: Example_1_TESS.ipynb  Example_2_Files.ipynb
plotter/: plot.py
smurfs/: __init__.py  __main__.py  smurfs.py  ssmurfs.py
smurfs/_smurfs/: __init__.py  frequency_finder.py  multi_smurfs.py  smurfs.py
smurfs/analysis/: analysis.py
smurfs/analyze/: __init__.py  dataobject.py  frequencies.py  timerseries.py
smurfs/files/: dataHandler.py  parse_conf_file.py
smurfs/preprocess/: __init__.py  file.py  tess.py
smurfs/preprocessing/: calculators.py  dataloader.py
smurfs/signal/: __init__.py  frequency_finder.py  lightcurve.py  periodogram.py  periodogramm.py
smurfs/smurfs/: __init__.py  frequency_finder.py  smurfs.py
smurfs/smurfs_/: smurfs.py
smurfs/smurfs_cli/: __main__.py
smurfs/smurfs_ui/: __main__.py  common_ui.py  error_handling.py  process_manager.py  smurfs_helper.py
support/: plot.py  support.py
tests/: kepler.txt  lightcurve_total.txt  test_AmplitudeSpectraCalc.py  test_files.py  test_frequency.py  test_frequencyMarker.txt  test_integrations.py  test_timeseries.py
timeseries/: __init__.py  timerseries.py
(+46 files in other folders)
