[tool.poetry]
name = "smurfs"
version = "2.0.0"
description = "Smart UseR Frequency analySer"
authors = ["Marco Muellner <muellnermarco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^6.1.4"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
scipy = "^1.14.1"
uncertainties = "^3.2.2"
astroquery = "^0.4.7"
lightkurve = "^2.5.0"
eleanor = "^2.0.5"
lmfit = "^1.3.2"
jupyter = "^1.1.1"
pyfcomb = "^2.1.0"
nbsphinx = "^0.9.5"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
